dev/sass/game.scss
@import "compass/reset";
@import "compass/css3";
@import "mixins";

@import "dev";
@import "touch";

body, 
html {
  width: 100%; height: 100%;
}

body{
  background: #111;
  font-family: "helvetica neue";
  color: #FFF;
  overflow: hidden;
}

.mask{
  position: relative;
  z-index: 1;
  display: block;
  width: 100%; height: 100%;
  
  @include g-transform(scale(3));
  @include g-perspective(300px);
  
}

@media screen and (device-aspect-ratio: 40/71) {
  .mask{
    @include g-transform(scale(1.5));
  }
}

@media screen and (device-aspect-ratio: 3/4) {
  .mask{
    @include g-transform(scale(2.5));
  }
}

@media screen and (device-aspect-ratio: 2/3) {
  .mask{
    @include g-transform(scale(1.5));
  }
}

.camera{
  display: block;
  position: absolute;
  left: 50%; top:50%;
  width: 0px; height: 0px;

  @include g-transform-style(preserve-3d);
  @include g-transform(translateY(0px) rotateX(-45deg) rotateY(-45deg));
}

.map {
  display: block;
  width: 520px; height: 200px;  
  opacity: 1;

  @include g-transform-style(preserve-3d);
  
  &.transition{
    @include g-transition-timing-function(ease-in);
    @include g-transition-property(all);
  }
}

.charachter{
  position: absolute;
  left: 0px; top: 0px;
  display: block;
  width: 20px; height: 20px;
  
  @include g-transform-style(preserve-3d);
  @include g-transform(translate3D(0px,0px,0px));
  
  ul{
    $width: 20px; $height: 20px; $depth: 20px;
    $x: -10px; $y: -2px; $z: -10px;
    $rx: 0deg; $ry: 0deg; $rz: 0deg;
    @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
    
    li:nth-child(5){
      background: lighten(#000, 80) !important;
    }
  }
}

span{
  display: none;
}

li{
  display: none;
  border-color: #333 !important;
}

#box_1{
  $width: 80px; $height: 200px; $depth: 340px;
  $x: 20px; $y: 0px; $z: 20px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
  
  li {
    display: block;
  }
}

#box_2{
  $width: 80px; $height: 142px; $depth: 80px;
  $x: 20px; $y: 0px; $z: 540px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_3{
  $width: 80px; $height: 100px; $depth: 520px;
  $x: 420px;  $y: 0px; $z: 100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_4{
  $width: 80px; $height: 132px; $depth: 160px;
  $x: 200px; $y: 0px; $z: 20px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}


#box_5{
  $width: 80px; $height: 173px; $depth: 80px;
  $x: 100px; $y: 0px; $z: 280px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_6{
  $width: 80px; $height: 151px; $depth: 80px;
  $x: 180px; $y: 0px; $z: 280px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_7{
  $width: 80px; $height: 133px; $depth: 80px;
  $x: 260px; $y: 0px; $z: 280px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_8{
  $width: 80px; $height: 116px; $depth: 80px;
  $x: 340px; $y: 0px; $z: 280px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_9{
  $width: 140px; $height: 20px; $depth: 80px;
  $x: 53px; $y: -151px; $z: 20px;
  $rx: 0deg; $ry: 0deg; $rz: 35deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_10{
  $width: 154px; $height: 20px; $depth: 80px;
  $x: 263px; $y: -97px; $z:  100px;
  $rx: 0deg; $ry: 0deg; $rz: 13deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_11{
  $width: 80px; $height: 20px; $depth: 196px;
  $x: 20px; $y: -186px; $z: 324px;
  $rx: -17.86deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_12{
  $width: 328px; $height: 20px; $depth: 80px;
  $x: 90px; $y: -101px; $z: 540px;
  $rx: 0deg; $ry: 0deg; $rz: 7.5deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_13{
  $width: 520px; $height: 0px; $depth: 640px;
  $x: 0px; $y: 0px; $z: 0px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

body .platform{
  li:nth-child(5){
    background: lighten(#000, 60) !important;
  }
}

.rotate {
  -webkit-animation-name: rotate;
	-webkit-animation-duration: 10s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-timing-function: linear; 
}
			
@-webkit-keyframes rotate {
	0% {
    @include g-transform(translateY(100px) rotateX(-45deg) rotateY(0deg));	
	}
	100% {
    @include g-transform(translateY(100px) rotateX(-45deg) rotateY(360deg));
	}
}

